# rpkm66-gateway

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
.github/: pull_request_template.md
.github/workflows/: build-deploy.yaml  build-deploy.yml  run-unit-test.yaml  test-build.yaml
app/rctx/: rctx.go
app/router/: gin.go
app/validator/: validator.go
cfgldr/: cfgldr.go
cmd/: main.go
config/: config.example.toml  config.example.yaml
constant/auth/: auth.constant.go  role.constant.go
constant/baan/: baan.constant.go
constant/file/: file.constant.go
constant/phase/: phase.go
constant/route/: route.go
docs/: swagger.yaml
docs/markdown/: api.md  event.md  file.md  vaccine.md
internal/rctx/: rctx.go
internal/router/: gin.go
internal/utils/: common.utils.go  common.utils_test.go
internal/validator/: validator.go
mocks/auth/: auth.mock.go
mocks/baan/: baan.mock.go
mocks/checkin/: checkin.mock.go
mocks/common/: common.mock.go
mocks/estamp/: estamp.mock.go
mocks/file/: file.mock.go
mocks/group/: group.mock.go
mocks/rctx/: rctx.mock.go
mocks/user/: user.mock.go
pkg/rctx/: request_context.go
proto/: auth.proto  baan.proto  checkin.proto  event.proto  file.proto  group.proto  group_grpc.pb.go  user.proto  user_grpc.pb.go
src/: config.rs  doc.rs  error.rs  main.go  main.rs
src/cmd/: main.go
src/config/: config.go
src/constant/: auth.constant.go  file.constant.go  role.constant.go
src/docs/: docs.go  swagger.json  swagger.yaml
src/dto/: auth.rs  baan.rs  checkin.rs  ci_user.rs  (+8 more)
(+204 files in other folders)
