[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["json", "headers", "macros", "multipart"] }
config = { version = "0.13.3", features = ["toml"] }
rpkm66-rust-proto = { git = "https://github.com/isd-sgcu/rpkm66-rust-proto" }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.9.2"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = "0.1.37"
utoipa = { version = "3.3.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
